AC_INIT([dumbaes],[0.1])

AX_REQUIRE_DEFINED([AX_IS_RELEASE])
AX_IS_RELEASE([git-directory])

AC_PREREQ([2.69])

AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([configure.ac])

AC_PROG_CC
AC_PROG_CXX

AX_REQUIRE_DEFINED([AX_COMPILER_FLAGS])
AX_COMPILER_FLAGS

AX_REQUIRE_DEFINED([AX_CXX_COMPILE_STDCXX_14])
AX_CXX_COMPILE_STDCXX_14([noext])

AM_INIT_AUTOMAKE([1.14 foreign])
AM_SILENT_RULES([yes])
AM_MAINTAINER_MODE([enable])

LT_PREREQ([2.4])
LT_INIT([disable-static])

AX_REQUIRE_DEFINED([PKG_CHECK_MODULES])
PKG_CHECK_MODULES([GLIB], [glib-2.0])
PKG_CHECK_MODULES([GIO], [gio-2.0])
PKG_CHECK_MODULES([GTK], [gtk+-3.0])
PKG_CHECK_MODULES([NETTLE], [nettle])

AC_CONFIG_FILES([
	Makefile
	api/Makefile
	demos/Makefile
	src/Makefile
	test/Makefile
])
AC_OUTPUT
